# kaggle-llamacpp-backend

./: README.md  pyproject.toml
configs/: config.text.example.yaml  config.vision.example.yaml
notebooks/: kaggle_runner.ipynb
src/kaggle_llamacpp/: __init__.py  config.py  core.py  download.py  ngrok_tunnel.py  utils.py
