[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-llamacpp-backend"
version = "0.1.0"
description = "Small Kaggle backend helpers for llama.cpp CUDA GGUF server and ngrok tunnel."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0"
]

[tool.setuptools.packages.find]
where = ["src"]
