[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-llamacpp-backend"
version = "0.2.0"
description = "Kaggle helpers for llama.cpp CUDA GGUF server, aria2+tqdm downloads, and ngrok tunnel."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0"
]

[tool.setuptools.packages.find]
where = ["src"]
